# sqlalchemy_project

./: .gitignore  README.md  clean_up.sh  creds.env  creds.example.env  docker-compose.example.txt  docker-compose.yml  fill_docker_compose_secrets.py  pyproject.toml  start_up.sh
database_volume/: postmaster.pid
database_volume/base/1/: 2619  2696  2840  2841
database_volume/base/16387/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13401  13401_fsm  13401_vm  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  16410  16411  16420  16421  16426  16427  16432  16433  16443  16444  16444_vm  16448  (+265 more)
database_volume/base/5/: pg_internal.init
database_volume/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
database_volume/pg_stat/: pgstat.stat
pgadmin_volume/: pgadmin4.db
pgadmin_volume/sessions/: 00345baa-164d-4a23-b0dd-d0bb94c429a9  0c17b17b-da9c-4b76-b8a8-7f407785a359  1022ebc2-9805-41a8-8841-5ba45047eaf1
python_scripts/: sql_main.py  sql_mixin.py  sql_models.py  utils.py
python_scripts/tests/: test_sql_mixin.py  test_utils.py
